force-app/main/default/objects/Case/fields/subject_issue__c.field-meta.xml
<CustomField>
    <fullName>subject_issue__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accesses</fullName>
            </value>
            <value>
                <fullName>Approval Flow</fullName>
            </value>
            <value>
                <fullName>Data Cleansing</fullName>
            </value>
            <value>
                <fullName>Data Problem</fullName>
                <label>Data problems</label>
            </value>
            <value>
                <fullName>Dudas sobre el proceso en Salesforce</fullName>
                <label>Doubts about the process in Salesforce</label>
            </value>
            <value>
                <fullName>Improvements</fullName>
            </value>
            <value>
                <fullName>Incidents</fullName>
            </value>
            <value>
                <fullName>License for new users</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Others</label>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Questions about process</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Actualización de campos y filtros</fullName>
                <label>Update fields and filters</label>
            </value>
            <value>
                <fullName>Vacation</fullName>
                <isActive>false</isActive>
                <label>Vacaciones</label>
            </value>
            <value>
                <fullName>Vacations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>