force-app/main/default/objects/Case/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Weight</fullName>
            </value>
            <value>
                <fullName>Product Quality</fullName>
            </value>
            <value>
                <fullName>Contamination</fullName>
            </value>
            <value>
                <fullName>Chemical Quality</fullName>
            </value>
            <value>
                <fullName>Delivery problem</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Administrative_and_logistics_quality</fullName>
                <isActive>false</isActive>
                <label>Administrative and logistics quality</label>
            </value>
            <value>
                <fullName>Chemical_Product_Quality</fullName>
                <isActive>false</isActive>
                <label>Chemical Product Quality</label>
            </value>
            <value>
                <fullName>Damaged_bag</fullName>
                <isActive>false</isActive>
                <label>Damaged bag</label>
            </value>
            <value>
                <fullName>Delivery_time</fullName>
                <isActive>false</isActive>
                <label>Delivery time</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Physical_Product_Quality</fullName>
                <isActive>false</isActive>
                <label>Physical Product Quality</label>
            </value>
            <value>
                <fullName>Picking List</fullName>
                <isActive>false</isActive>
                <label>Picking List</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>