force-app/main/default/objects/Case/fields/Telefono_movil__c.field-meta.xml
<CustomField>
    <fullName>Telefono_movil__c</fullName>
    <inlineHelpText>Enter your contact phone. For Chile, use the format 87654321</inlineHelpText>
    <label>Teléfono móvil</label>
    <type>Phone</type>
</CustomField>