force-app/main/default/objects/Case/fields/Time_Until_Approval_of_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Time_Until_Approval_of_Estimate__c</fullName>
    <formula>(Date_Estimation_Approved__c - Date_Key_User_Approved__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Until Approval of Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>