force-app/main/default/objects/Case/fields/Tipo_de_persona__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_persona__c</fullName>
    <label>Tipo de persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Jurídica</fullName>
            </value>
            <value>
                <fullName>Natural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>