force-app/main/default/objects/Case/fields/Tipos_de_Riesgos__c.field-meta.xml
<CustomField>
    <fullName>Tipos_de_Riesgos__c</fullName>
    <label>Tipos de Riesgos</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Riesgos__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accidente o  de  camioneta o camión daño a persona</fullName>
            </value>
            <value>
                <fullName>Accidente o  de  camioneta o camión daño material</fullName>
            </value>
            <value>
                <fullName>Accidente por pasivos de SQM, derrumbe via ferrea, muelle o similar</fullName>
            </value>
            <value>
                <fullName>Afectación del patrimonio Histórico</fullName>
            </value>
            <value>
                <fullName>Contaminación al aire y emisiones de CO2</fullName>
            </value>
            <value>
                <fullName>Contaminación de la Tierra</fullName>
            </value>
            <value>
                <fullName>Contribuciones a la Comunidad</fullName>
            </value>
            <value>
                <fullName>Contribuciones por Contrato CORFO</fullName>
            </value>
            <value>
                <fullName>Corte del suministro de agua</fullName>
            </value>
            <value>
                <fullName>Corte de Luz</fullName>
            </value>
            <value>
                <fullName>Derrame en camino</fullName>
            </value>
            <value>
                <fullName>Derrame en mar, río o ecosistema</fullName>
            </value>
            <value>
                <fullName>Desarrollo de Fuerza Laboral</fullName>
            </value>
            <value>
                <fullName>Desarrollo de Proveedores</fullName>
            </value>
            <value>
                <fullName>Desarrollo Productivo</fullName>
            </value>
            <value>
                <fullName>Disponibilidad de Agua</fullName>
            </value>
            <value>
                <fullName>Ecosistemas</fullName>
            </value>
            <value>
                <fullName>Educación</fullName>
            </value>
            <value>
                <fullName>Gestión de Residuos</fullName>
            </value>
            <value>
                <fullName>Huelga o toma de Camino</fullName>
            </value>
            <value>
                <fullName>Impuestos regalias y acuerdos de equidad</fullName>
            </value>
            <value>
                <fullName>Incendio</fullName>
            </value>
            <value>
                <fullName>Infraestructura</fullName>
            </value>
            <value>
                <fullName>Intoxicación por gases a trabajadores o externos</fullName>
            </value>
            <value>
                <fullName>Malas condiciones de habitabilidad</fullName>
            </value>
            <value>
                <fullName>Necesidades Expectativas y Consideración</fullName>
            </value>
            <value>
                <fullName>Propiedad y Derecho del Agua</fullName>
            </value>
            <value>
                <fullName>Relacionamiento</fullName>
            </value>
            <value>
                <fullName>Relaciones Públicas</fullName>
            </value>
            <value>
                <fullName>Rotura de aducción de agua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>