force-app/main/default/objects/Case/fields/Tracking_Number_Filial__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number_Filial__c</fullName>
    <label>Tracking Number Filial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>