force-app/main/default/objects/Case/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If you do not find the transaction, please validate the invoiced account has &quot;Customer account ID&quot;. Without this information is not possible to upload it to Salesforce.</description>
    <label>Transaction</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Transaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Transacción</value>
        </filterItems>
        <filterItems>
            <field>Transaction__c.Transaction_State__c</field>
            <operation>equals</operation>
            <value>Invoiced</value>
        </filterItems>
        <filterItems>
            <field>Transaction__c.Account_Invoice__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>