force-app/main/default/objects/Case/fields/UAT_Configurations__c.field-meta.xml
<CustomField>
    <fullName>UAT_Configurations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UAT Configurations</label>
    <type>Checkbox</type>
</CustomField>