force-app/main/default/objects/Case/fields/User_Approval_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>User_Approval_Response_Time__c</fullName>
    <formula>(Date_User_Approved__c - Date_Finish_Development__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Approval Response Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>