force-app/main/default/objects/Case/fields/User_Approved__c.field-meta.xml
<CustomField>
    <fullName>User_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Approved</label>
    <type>Checkbox</type>
</CustomField>