force-app/main/default/objects/Case/fields/Usuario_delegado__c.field-meta.xml
<CustomField>
    <fullName>Usuario_delegado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Para categoría Vacaciones, ingrese el responsable de sus actividades.</inlineHelpText>
    <label>Usuario delegado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos2</relationshipName>
    <type>Lookup</type>
</CustomField>