force-app/main/default/objects/Case/fields/Validate_Samples__c.field-meta.xml
<CustomField>
    <fullName>Validate_Samples__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Samples</label>
    <type>Checkbox</type>
</CustomField>