force-app/main/default/objects/Case/fields/Valor_riesgo__c.field-meta.xml
<CustomField>
    <fullName>Valor_riesgo__c</fullName>
    <label>Valor riesgo</label>
    <length>2</length>
    <type>Text</type>
</CustomField>