force-app/main/default/objects/Case/recordTypes/Auditoria_de_Cliente.recordType-meta.xml
<RecordType>
    <fullName>Auditoria_de_Cliente</fullName>
    <active>true</active>
    <businessProcess>Proceso Auditorias</businessProcess>
    <label>Auditoria de Cliente</label>
</RecordType>