force-app/main/default/objects/Case/recordTypes/Claim_to_External_Supplier.recordType-meta.xml
<RecordType>
    <fullName>Claim_to_External_Supplier</fullName>
    <active>true</active>
    <businessProcess>Proceso Reclamos Calidad INT</businessProcess>
    <label>Claim to External Supplier</label>
</RecordType>