force-app/main/default/objects/Case/recordTypes/Comunidad.recordType-meta.xml
<RecordType>
    <fullName>Comunidad</fullName>
    <active>true</active>
    <businessProcess>Proceso Comunidades</businessProcess>
    <description>Tipo de registro para casos comunidad</description>
    <label>Comunidad</label>
</RecordType>