force-app/main/default/objects/Case/recordTypes/Cuestionarios.recordType-meta.xml
<RecordType>
    <fullName>Cuestionarios</fullName>
    <active>true</active>
    <businessProcess>Proceso Solicitud de Documentos</businessProcess>
    <label>Cuestionarios</label>
</RecordType>