force-app/main/default/objects/Case/recordTypes/Otros.recordType-meta.xml
<RecordType>
    <fullName>Otros</fullName>
    <active>true</active>
    <businessProcess>Proceso Otros Casos</businessProcess>
    <label>Otros</label>
</RecordType>