force-app/main/default/objects/Case/recordTypes/Reclamos_Calidad.recordType-meta.xml
<RecordType>
    <fullName>Reclamos_Calidad</fullName>
    <active>true</active>
    <businessProcess>Proceso Reclamos Calidad</businessProcess>
    <label>Reclamos Calidad</label>
</RecordType>