force-app/main/default/objects/Case/recordTypes/Reclamos_Calidad_Interno.recordType-meta.xml
<RecordType>
    <fullName>Reclamos_Calidad_Interno</fullName>
    <active>true</active>
    <businessProcess>Proceso Reclamos Calidad INT</businessProcess>
    <label>Reclamos Calidad Interno</label>
</RecordType>