force-app/main/default/objects/Case/recordTypes/Sample_Request.recordType-meta.xml
<RecordType>
    <fullName>Sample_Request</fullName>
    <active>true</active>
    <businessProcess>samples</businessProcess>
    <description>Tipo de registro para solicitud de muestras.</description>
    <label>Sample Request</label>
</RecordType>