force-app/main/default/objects/Case/recordTypes/Self_Audit.recordType-meta.xml
<RecordType>
    <fullName>Self_Audit</fullName>
    <active>true</active>
    <businessProcess>Proceso Solicitud de Documentos</businessProcess>
    <label>Self Audit</label>
</RecordType>