force-app/main/default/objects/Case/recordTypes/Soporte_Interno.recordType-meta.xml
<RecordType>
    <fullName>Soporte_Interno</fullName>
    <active>false</active>
    <businessProcess>Proceso Soporte Interno</businessProcess>
    <label>Soporte técnico de la plataforma</label>
</RecordType>