force-app/main/default/objects/Case/validationRules/Calidad_Reclamo_Externo_EC_Reporting.validationRule-meta.xml
<ValidationRule>
    <fullName>Calidad_Reclamo_Externo_EC_Reporting</fullName>
    <active>true</active>
    <description>Controla cumplimiento del proceso en relación a la etapa Investigación.</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Reclamos_Calidad&quot; &amp;&amp;
Investigacion_Completa__c = false &amp;&amp;
ISPICKVAL(Status, &quot;Reporting&quot;)</errorConditionFormula>
    <errorMessage>Debes completar el evento clave &quot;Investigación&quot;.</errorMessage>
</ValidationRule>