force-app/main/default/objects/Case/validationRules/Calidad_Reclamo_Externo_EC_ToBeAssigned.validationRule-meta.xml
<ValidationRule>
    <fullName>Calidad_Reclamo_Externo_EC_ToBeAssigned</fullName>
    <active>true</active>
    <description>Controla cumplimiento del proceso en relación a la etapa Recopilación de información.</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Reclamos_Calidad&quot; &amp;&amp;
RInfo_Completa__c = false &amp;&amp;
ISPICKVAL(Status, &quot;To be assigned&quot;)</errorConditionFormula>
    <errorMessage>Debes completar el evento clave &quot;Recopilación de información&quot;.</errorMessage>
</ValidationRule>