force-app/main/default/objects/Case/validationRules/Calidad_Reclamo_Externo_ECPartialClosure.validationRule-meta.xml
<ValidationRule>
    <fullName>Calidad_Reclamo_Externo_ECPartialClosure</fullName>
    <active>true</active>
    <description>Controla cumplimiento del proceso en relación a la etapa Informe a Cliente</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Reclamos_Calidad&quot; &amp;&amp;
InformeCliente_Completa__c = false &amp;&amp;
ISPICKVAL(Status, &quot;Partial closure&quot;)</errorConditionFormula>
    <errorMessage>Debes completar el evento clave &quot;Preparación Informe a Cliente&quot;.</errorMessage>
</ValidationRule>