force-app/main/default/objects/Case/validationRules/Calidad_Reclamo_Externo_Investigacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Calidad_Reclamo_Externo_Investigacion</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Reclamos_Calidad&quot; &amp;&amp;
ISPICKVAL(Status, &quot;Investigation&quot;) &amp;&amp;
ISBLANK(Ingeniero_de_Calidad__c)</errorConditionFormula>
    <errorDisplayField>Ingeniero_de_Calidad__c</errorDisplayField>
    <errorMessage>No puedes comenzar la investigación sin la asignación del Ingeniero de Calidad.</errorMessage>
</ValidationRule>