force-app/main/default/objects/Case/validationRules/Calidad_Reclamo_Interno_EC_Investigacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Calidad_Reclamo_Interno_EC_Investigacion</fullName>
    <active>true</active>
    <description>Controla cumplimiento del proceso en relación a la etapa Asignación.</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Reclamos_Calidad_Interno&quot; &amp;&amp;
Asignacion_Completa__c = false &amp;&amp;
ISPICKVAL(Status, &quot;Investigation&quot;)</errorConditionFormula>
    <errorMessage>Debes completar el evento clave &quot;Asignación&quot;.</errorMessage>
</ValidationRule>