force-app/main/default/objects/Case/validationRules/Calidad_Reclamo_Interno_ECPartialClosure.validationRule-meta.xml
<ValidationRule>
    <fullName>Calidad_Reclamo_Interno_ECPartialClosure</fullName>
    <active>true</active>
    <description>Controla cumplimiento del proceso en relación a la etapa Investigación.</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Reclamos_Calidad_Interno&quot; &amp;&amp;
Investigacion_Completa__c = false &amp;&amp;
ISPICKVAL(Status, &quot;Partial closure&quot;) &amp;&amp; 
$Profile.Name  &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
    <errorMessage>Debes completar el evento clave &quot;Investigación&quot;.</errorMessage>
</ValidationRule>