force-app/main/default/objects/Case/validationRules/Calidad_Reclamo_Interno_Investigacion.validationRule-meta.xml
<ValidationRule>
    <fullName>Calidad_Reclamo_Interno_Investigacion</fullName>
    <active>true</active>
    <description>To move an Internal Claim to Investigation step, it is necessary to update the Quality Engineer field.</description>
    <errorConditionFormula>RecordType.DeveloperName = &quot;Reclamos_Calidad_Interno&quot; &amp;&amp;
ISPICKVAL(Status, &quot;Investigation&quot;) &amp;&amp;
ISBLANK(Ingeniero_de_Calidad__c)</errorConditionFormula>
    <errorDisplayField>Ingeniero_de_Calidad__c</errorDisplayField>
    <errorMessage>No puedes comenzar la investigación sin la asignación del Ingeniero de Calidad</errorMessage>
</ValidationRule>