force-app/main/default/objects/Case/validationRules/Calidad_Self_Audit_PartialClosure.validationRule-meta.xml
<ValidationRule>
    <fullName>Calidad_Self_Audit_PartialClosure</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
				AND(
								RecordType.DeveloperName = &quot;Self_Audit&quot;,
								ISPICKVAL(Status, &quot;Partial closure&quot;),
								Documento_Aprobado__c = False
								),
				TRUE, FALSE
				)</errorConditionFormula>
    <errorMessage>No puedes avanzar al cierre parcial del caso si aún no es aprobado el documento. Valida el historial de aprobaciones del caso.</errorMessage>
</ValidationRule>