force-app/main/default/objects/Case/validationRules/Comunidad_CamposJuridica.validationRule-meta.xml
<ValidationRule>
    <fullName>Comunidad_CamposJuridica</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   RecordType.DeveloperName = &apos;Comunidad&apos;,
   ISPICKVAL(Tipo_de_persona__c,&apos;Jurídica&apos;),
   OR(
      ISBLANK(Razon_Social__c),
      ISBLANK(RUT_o_DNI__c),
      ISBLANK(Representante_legal__c)
   )
)</errorConditionFormula>
    <errorMessage>Debe ingresar los datos de persona jurídica (razón social, RUT o DNI, representante legal)</errorMessage>
</ValidationRule>