force-app/main/default/objects/Case/validationRules/Comunidad_CierreCompletoSeguimiento.validationRule-meta.xml
<ValidationRule>
    <fullName>Comunidad_CierreCompletoSeguimiento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Comunidad&apos;,
    ISPICKVAL(Status,&apos;Closed&apos;),
    OR(
       ISPICKVAL(Sub_estado__c,&apos;Cierre completado&apos;),
       ISPICKVAL(Sub_estado__c,&apos;Cerrado con Seguimiento&apos;)
    ),
    NOT(Aprobacion_cliente__c)
)</errorConditionFormula>
    <errorMessage>Para poder cerrar el caso completado o con seguimiento debe haber aprobado el informe a cliente</errorMessage>
</ValidationRule>