force-app/main/default/objects/Case/validationRules/Comunidad_Comunidad_AprobReporteCliente.validationRule-meta.xml
<ValidationRule>
    <fullName>Comunidad_Comunidad_AprobReporteCliente</fullName>
    <active>true</active>
    <description>Se alerta al pasar a la etapa de espera de respuesta de cliente, negociación o cierre sin la aprobación del reporte a cliente.</description>
    <errorConditionFormula>OR(
AND(
RecordType.DeveloperName = &apos;Comunidad&apos;,
NOT(Aprobacion_cliente__c),
OR(
ISPICKVAL(Status,&apos;Waiting for costumer answer&apos;),
ISPICKVAL(Status,&apos;Negotiation&apos;),
ISPICKVAL(Status, &apos;Closed&apos;)),
OR(
TEXT(PRIORVALUE(Status)) =&apos;To be assigned&apos;,
TEXT(PRIORVALUE(Status)) =&apos;Investigation&apos;,
TEXT(PRIORVALUE(Status)) =&apos;Reported to costumer&apos;)
),
AND(
RecordType.DeveloperName = &apos;Comunidad&apos;,
NOT(Aprobacion_cliente__c),
TEXT(PRIORVALUE(Status)) =&apos;New&apos;,
ISPICKVAL(Status,&apos;Closed&apos;),
NOT(ISPICKVAL(Sub_estado__c, &apos;Cierre por información no verídica&apos;)),
NOT(ISPICKVAL(Sub_estado__c, &apos;Cierre por falta de información&apos;))
))</errorConditionFormula>
    <errorMessage>Antes de ir a la etapa en espera de respuesta de cliente, negociación o cierre, el Reporte para el cliente debe estar aprobado. Para ello, deber seleccionar el botón &quot;Solicitar Aprobación&quot; en la esquina superior derecha de esta ventana.</errorMessage>
</ValidationRule>