force-app/main/default/objects/Case/validationRules/Comunidad_EstadoCaso.validationRule-meta.xml
<ValidationRule>
    <fullName>Comunidad_EstadoCaso</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   ISCHANGED(Status),
    $Profile.Name = &apos;SQM Comunidad&apos;
)</errorConditionFormula>
    <errorMessage>No cuenta con los permisos necesarios para modificar el estado del campo</errorMessage>
</ValidationRule>