force-app/main/default/objects/Case/validationRules/Comunidad_LargoTelefono.validationRule-meta.xml
<ValidationRule>
    <fullName>Comunidad_LargoTelefono</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Comunidad&apos;,
    ISPICKVAL(Pais__c,&quot;Chile&quot;),
    ISNEW(),
    LEN(Telefono_movil__c) &lt;&gt; 8
)</errorConditionFormula>
    <errorMessage>Debe ingresar 8 dígitos en el teléfono móvil</errorMessage>
</ValidationRule>