force-app/main/default/objects/Case/validationRules/Comunidad_NuevoCaso.validationRule-meta.xml
<ValidationRule>
    <fullName>Comunidad_NuevoCaso</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    NOT(ISPICKVAL(Status,&apos;New&apos;))
)</errorConditionFormula>
    <errorMessage>Debe iniciar el caso en el estado nuevo.</errorMessage>
</ValidationRule>