force-app/main/default/objects/Case/validationRules/Comunidad_RiesgoYDetalle.validationRule-meta.xml
<ValidationRule>
    <fullName>Comunidad_RiesgoYDetalle</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   RecordType.DeveloperName = &apos;Comunidad&apos;,
   NOT(ISBLANK(TEXT(Riesgos__c))),
   ISBLANK(TEXT(Tipos_de_Riesgos__c))
)</errorConditionFormula>
    <errorDisplayField>Tipos_de_Riesgos__c</errorDisplayField>
    <errorMessage>Debe registrar el tipo de riesgo asociado al caso</errorMessage>
</ValidationRule>