force-app/main/default/objects/Case/validationRules/Comunidad_Validar_RUT.validationRule-meta.xml
<ValidationRule>
    <fullName>Comunidad_Validar_RUT</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Pais__c,&quot;Chile&quot;),
IF(
OR(
LEN(RUT_o_DNI__c) &lt; 3,
LEN(RUT_o_DNI__c) &gt; 11,
MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c) - 1, 1) &lt;&gt; &apos;-&apos;,
NOT(ISNUMBER(MID(RUT_o_DNI__c, 1, LEN(RUT_o_DNI__c) - 2))),
AND(
NOT(ISNUMBER(MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c), 1))),
MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c), 1) &lt;&gt; &apos;K&apos;,
MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c), 1) &lt;&gt; &apos;k&apos;
)
),
IF(
LEN(RUT_o_DNI__c) = 0,
FALSE,
TRUE
),
IF(
11 - MOD(
VALUE(MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c) - 2, 1)) * 2 +
IF(LEN(RUT_o_DNI__c) &gt; 3, VALUE(MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c) - 3, 1)) * 3, 0) +
IF(LEN(RUT_o_DNI__c) &gt; 4, VALUE(MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c) - 4, 1)) * 4, 0) +
IF(LEN(RUT_o_DNI__c) &gt; 5, VALUE(MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c) - 5, 1)) * 5, 0) +
IF(LEN(RUT_o_DNI__c) &gt; 6, VALUE(MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c) - 6, 1)) * 6, 0) +
IF(LEN(RUT_o_DNI__c) &gt; 7, VALUE(MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c) - 7, 1)) * 7, 0) +
IF(LEN(RUT_o_DNI__c) &gt; 8, VALUE(MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c) - 8, 1)) * 2, 0) +
IF(LEN(RUT_o_DNI__c) &gt; 9, VALUE(MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c) - 9, 1)) * 3, 0) +
IF(LEN(RUT_o_DNI__c) &gt; 10, VALUE(MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c) - 10, 1)) * 4, 0),
11
) = IF(
OR(
MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c), 1) = &apos;k&apos;,
MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c), 1) = &apos;K&apos;
),
10,
IF(
MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c), 1) = &apos;0&apos;,
11,
VALUE(MID(RUT_o_DNI__c, LEN(RUT_o_DNI__c), 1))
)
),
FALSE,
TRUE
)
)
)</errorConditionFormula>
    <errorDisplayField>RUT_o_DNI__c</errorDisplayField>
    <errorMessage>RUT erróneo, debe ingresar RUT válido</errorMessage>
</ValidationRule>