force-app/main/default/objects/Case/validationRules/HD10_Helpdesk_Production_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>HD10_Helpdesk_Production_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
RecordType.DeveloperName = &apos;Helpdesk&apos;,
ISPICKVAL(subject_issue__c, &apos;Improvements&apos;),
ISPICKVAL(Status, &apos;Validation&apos;),
ISPICKVAL(Sub_estado__c, &apos;Validación Producción&apos;),
PRIORVALUE(Sub_estado__c) != &apos;Aprobado UAT&apos;,
OR(
In_Production__c = False,
ISPICKVAL(Sub_Category__c, &apos;&apos;),
ISBLANK(Actual_Effort__c)))</errorConditionFormula>
    <errorMessage>To advance to Production Validation Sub-Status, the configurations in UAT must be approved, Sub Category, In Production and Actual Effort Fields must be completed. HD10</errorMessage>
</ValidationRule>