force-app/main/default/objects/Case/validationRules/HD3_Helpdesk_Is_the_Issue_Stopper_field.validationRule-meta.xml
<ValidationRule>
    <fullName>HD3_Helpdesk_Is_the_Issue_Stopper_field</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
RecordType.DeveloperName = &apos;Helpdesk&apos;,
ISPICKVAL(subject_issue__c,&apos;Incidents&apos;), 
ISPICKVAL(Is_the_Issue_a_Stopper__c,&apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Is_the_Issue_a_Stopper__c</errorDisplayField>
    <errorMessage>For incidents it is necessary to complete the Is the Issue a Stopper? field. (HD3)</errorMessage>
</ValidationRule>