force-app/main/default/objects/Case/validationRules/HD4_Helpdesk_Modify_Closed_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>HD4_Helpdesk_Modify_Closed_Case</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
AND(
NOT(ISNEW()),
RecordType.DeveloperName = &apos;Helpdesk&apos;,
ISPICKVAL(PRIORVALUE(Status) , &apos;Closed&apos;)), true, false)</errorConditionFormula>
    <errorMessage>It is not possible to modify a Closed Case. (HD4)</errorMessage>
</ValidationRule>