force-app/main/default/objects/Case/validationRules/HD5_Helpdesk_Update_Case_Owner_Incidents.validationRule-meta.xml
<ValidationRule>
    <fullName>HD5_Helpdesk_Update_Case_Owner_Incidents</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
RecordType.DeveloperName = &apos;Helpdesk&apos;,
ISPICKVAL(subject_issue__c, &apos;Incidents&apos;),
Not(ISPICKVAL(Status, &apos;New&apos;)),
Owner:Queue.QueueName = &apos;Helpdesk Incidents and Inquiries&apos;
				)</errorConditionFormula>
    <errorMessage>Before moving to the next state you must change the owner of the Case. (HD5)</errorMessage>
</ValidationRule>